# Parallelisme

dm-2014/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  exam-dm  exam-dm.cl  exam-dm.cpp  test.txt
dm-2014/common/: clutils.cpp  clutils.h  tga.h
dm-2014/nbproject/: configurations.xml  project.xml
dm-2014/nbproject/private/: Default.properties  configurations.xml
